[project]
name = "bug4bug"
version = "0.1.0"
description = "Bug 4 bug insect identifier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torchvision>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bug4bug"]